# basicRT

./: .gitignore  Makefile  README.md  meson.build
srcs/: Camera.cpp  Camera.hpp  InputManager.cpp  InputManager.hpp  Sphere.cpp  Sphere.hpp  define.hpp  main.cpp
subprojects/: libjson.wrap
